# stweet

./: pyproject.toml
stweet/auth/fail_strategy/: tor_ip_change_auth_fail_strategy.py
stweet/twitter_api/: default_twitter_web_client_provider.py
